# personal_agent_eval

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  SKILL.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
cli/: index.html
concepts/: index.html
config_model/: index.html
configuration/: index.html
deterministic_checks/: index.html
docs/: cli.md  concepts.md  config_model.md  configuration.md  deterministic_checks.md  fingerprints.md  getting_started.md  hybrid_evaluation.md  index.md  judge_prompt_redesign.md  judge_results.md  openclaw_agents.md  reporting.md  run_artifacts.md
fingerprints/: index.html
getting_started/: index.html
hybrid_evaluation/: index.html
internal_docs/: OPENCLAW_CONFIG_SPEC.md
judge_prompt_redesign/: index.html
judge_results/: index.html
openclaw_agents/: index.html
reporting/: index.html
run_artifacts/: index.html
scripts/: check_no_leaked_secrets.py
search/: search_index.json
tests/: test_catalog_discovery.py  test_cli_bootstrap.py  test_cli_orchestration.py  test_config_models.py  test_contract_quality_gates.py  test_deterministic_evaluation.py  test_deterministic_openclaw.py  test_fingerprints.py  test_hybrid_aggregation.py  test_json_floats.py  test_judge_openclaw_context.py  test_judge_openrouter.py  test_judge_orchestrator.py  test_judge_system_prompt.py  test_llm_probe_openrouter.py  test_llm_probe_runner.py  test_openclaw_docker_env.py  test_openclaw_repo_quality_gates.py  test_openclaw_resolution.py  test_openclaw_run_evidence.py  test_openclaw_runner.py  test_reporting.py  (+11 more)
(+223 files in other folders)
