[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "personal-agent-eval"
version = "0.1.0"
description = "Evaluation toolkit for personal agent benchmarks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "benchmark-openclaw-llm contributors" },
]
keywords = ["agent", "benchmark", "evaluation", "llm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.11.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
pae = "personal_agent_eval.cli:run"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a6",
]
docs = [
  "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/personal_agent_eval"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "openrouter_e2e: real OpenRouter smoke test gated by environment variables and network access",
]
